# remoterm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml  release.yml
crates/remoterm-proto/: Cargo.toml
crates/remoterm-proto/src/: lib.rs
crates/remoterm-server/: Cargo.toml
crates/remoterm-server/src/: main.rs  storage.rs
docs/: deployment.md  spec.md  ttyd-mapping.md
static/: index.html
tests/: restart_recovery.sh
