[package]
name = "remoterm-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util = "0.3"
portable-pty = "0.9"
rusqlite = { version = "0.33", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

remoterm-proto = { path = "../remoterm-proto" }
